// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Badge renders all intents 1`] = `
.c0 {
  font-family: 'Roboto','Noto Sans JP','Noto Sans CJK KR','Noto Sans Arabic UI','Noto Sans Devanagari UI','Noto Sans Hebrew','Noto Sans Thai UI','Helvetica','Arial','sans-serif','Noto Sans';
  font-weight: 600;
  font-size: 0.75rem;
  line-height: 24px;
  padding-left: 0.5rem;
  padding-right: 0.5rem;
  background: #e4f5eb;
  color: #146536;
  border-radius: 50px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

<span
  className="c0"
  fontWeight="semiBold"
  intent="positive"
  size="medium"
>
  positive
</span>
`;

exports[`Badge renders all intents 2`] = `
.c0 {
  font-family: 'Roboto','Noto Sans JP','Noto Sans CJK KR','Noto Sans Arabic UI','Noto Sans Devanagari UI','Noto Sans Hebrew','Noto Sans Thai UI','Helvetica','Arial','sans-serif','Noto Sans';
  font-weight: 600;
  font-size: 0.75rem;
  line-height: 24px;
  padding-left: 0.5rem;
  padding-right: 0.5rem;
  background: #e0f0fb;
  color: #0061a1;
  border-radius: 50px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

<span
  className="c0"
  fontWeight="semiBold"
  intent="inform"
  size="medium"
>
  info
</span>
`;

exports[`Badge renders all intents 3`] = `
.c0 {
  font-family: 'Roboto','Noto Sans JP','Noto Sans CJK KR','Noto Sans Arabic UI','Noto Sans Devanagari UI','Noto Sans Hebrew','Noto Sans Thai UI','Helvetica','Arial','sans-serif','Noto Sans';
  font-weight: 600;
  font-size: 0.75rem;
  line-height: 24px;
  padding-left: 0.5rem;
  padding-right: 0.5rem;
  background: #edeeef;
  color: #52585f;
  border-radius: 50px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

<span
  className="c0"
  fontWeight="semiBold"
  intent="neutral"
  size="medium"
>
  neutral
</span>
`;

exports[`Badge renders all intents 4`] = `
.c0 {
  font-family: 'Roboto','Noto Sans JP','Noto Sans CJK KR','Noto Sans Arabic UI','Noto Sans Devanagari UI','Noto Sans Hebrew','Noto Sans Thai UI','Helvetica','Arial','sans-serif','Noto Sans';
  font-weight: 600;
  font-size: 0.75rem;
  line-height: 24px;
  padding-left: 0.5rem;
  padding-right: 0.5rem;
  background: #fff4e0;
  color: #754d00;
  border-radius: 50px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

<span
  className="c0"
  fontWeight="semiBold"
  intent="warn"
  size="medium"
>
  warning
</span>
`;

exports[`Badge renders all intents 5`] = `
.c0 {
  font-family: 'Roboto','Noto Sans JP','Noto Sans CJK KR','Noto Sans Arabic UI','Noto Sans Devanagari UI','Noto Sans Hebrew','Noto Sans Thai UI','Helvetica','Arial','sans-serif','Noto Sans';
  font-weight: 600;
  font-size: 0.75rem;
  line-height: 24px;
  padding-left: 0.5rem;
  padding-right: 0.5rem;
  background: #f8e4e6;
  color: #951727;
  border-radius: 50px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

<span
  className="c0"
  fontWeight="semiBold"
  intent="critical"
  size="medium"
>
  critical
</span>
`;

exports[`Badge renders all sizes 1`] = `
.c0 {
  font-family: 'Roboto','Noto Sans JP','Noto Sans CJK KR','Noto Sans Arabic UI','Noto Sans Devanagari UI','Noto Sans Hebrew','Noto Sans Thai UI','Helvetica','Arial','sans-serif','Noto Sans';
  font-weight: 600;
  font-size: 0.75rem;
  line-height: 24px;
  padding-left: 0.5rem;
  padding-right: 0.5rem;
  background: #ede8fb;
  color: #4b20c3;
  border-radius: 50px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

<span
  className="c0"
  fontWeight="semiBold"
  intent="key"
  size="medium"
>
  default (medium)
</span>
`;

exports[`Badge renders all sizes 2`] = `
.c0 {
  font-family: 'Roboto','Noto Sans JP','Noto Sans CJK KR','Noto Sans Arabic UI','Noto Sans Devanagari UI','Noto Sans Hebrew','Noto Sans Thai UI','Helvetica','Arial','sans-serif','Noto Sans';
  font-weight: 600;
  font-size: 0.6875rem;
  line-height: 16px;
  padding-left: 0.5rem;
  padding-right: 0.5rem;
  background: #ede8fb;
  color: #4b20c3;
  border-radius: 50px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

<span
  className="c0"
  fontWeight="semiBold"
  intent="key"
  size="small"
>
  small
</span>
`;

exports[`Badge renders all sizes 3`] = `
.c0 {
  font-family: 'Roboto','Noto Sans JP','Noto Sans CJK KR','Noto Sans Arabic UI','Noto Sans Devanagari UI','Noto Sans Hebrew','Noto Sans Thai UI','Helvetica','Arial','sans-serif','Noto Sans';
  font-weight: 600;
  font-size: 0.75rem;
  line-height: 24px;
  padding-left: 0.5rem;
  padding-right: 0.5rem;
  background: #ede8fb;
  color: #4b20c3;
  border-radius: 50px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

<span
  className="c0"
  fontWeight="semiBold"
  intent="key"
  size="medium"
>
  medium
</span>
`;

exports[`Badge renders all sizes 4`] = `
.c0 {
  font-family: 'Roboto','Noto Sans JP','Noto Sans CJK KR','Noto Sans Arabic UI','Noto Sans Devanagari UI','Noto Sans Hebrew','Noto Sans Thai UI','Helvetica','Arial','sans-serif','Noto Sans';
  font-weight: 600;
  font-size: 1rem;
  line-height: 32px;
  padding-left: 0.75rem;
  padding-right: 0.75rem;
  background: #ede8fb;
  color: #4b20c3;
  border-radius: 50px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

<span
  className="c0"
  fontWeight="semiBold"
  intent="key"
  size="large"
>
  large
</span>
`;
